--- a/c06/package.json
+++ b/c06/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "c04",
+  "name": "c06",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "node-input-validator": "^4.4.1"
+    "mongoose": "^6.0.12"
   }
 }
